fixed y overflow caused by sidebar

--- a/PixTag/src/styles/index.css
+++ b/PixTag/src/styles/index.css
@@ -14,6 +14,11 @@ body {
   padding: 0;
 }
 
+html, body, #root {
+  width: 100%;
+  min-height: 100%;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
